--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:watch": "jest --watch",
     "lint": "eslint src",
     "gen": "node examples/scripts/generateExampleConfigs.js && node examples/scripts/generateExamples.js && xdg-open docs/jquery.html",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "prepare": "babel ./src --out-dir ./lib && gulp dist"
   },
   "author": "Kiran Abburi",
   "license": "MIT",
@@ -67,7 +68,7 @@
     "node-sass": "^4.5.2",
     "opn": "^5.4.0",
     "postcss-loader": "^1.3.3",
-    "prettier": "^1.14.3",    
+    "prettier": "^1.14.3",
     "raf": "^3.4.0",
     "react": "^16.0.0",
     "react-addons-test-utils": "^15.6.2",
